--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 streamlit==1.35.0
-xgboost==1.6.2
-pandas==2.2.2
+pandas==2.1.4 
+matplotlib==3.8.2 
+seaborn==0.13.0 
+scikit-learn==1.3.2 
+xgboost==2.1.4 
+lightgbm==4.2.0 
+imbalanced-learn==0.11.0 
+joblib==1.3.2
 numpy==1.26.4
-scikit-learn==1.6.1
-joblib==1.4.2
