--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.35.0
-pandas==2.1.4 
+pandas==2.1.4 --no-build-isolation  # Skip kompilasi C
+xgboost==1.7.6 --no-build-isolation
 matplotlib==3.8.2 
 seaborn==0.13.0 
 scikit-learn==1.3.2 
-xgboost==1.7.6 
 lightgbm==4.2.0 
 imbalanced-learn==0.11.0 
 joblib==1.3.2
-numpy==1.23.5 
+numpy==1.23.5
