--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.35.0
-pandas==2.1.4 --no-build-isolation  # Skip kompilasi C
-xgboost==1.7.6 --no-build-isolation
+pandas==2.1.4
+xgboost==1.7.6
 matplotlib==3.8.2 
 seaborn==0.13.0 
 scikit-learn==1.3.2 
